Incorrect behavior of speed control strip when based on soft-trimmed input strip #45191

Closed
opened 2015-06-25 16:01:46 +02:00 by Willi · 7 comments

System Information
Win7/64, GTX 750 Ti

Blender Version
2.74 official, 2.75-42314b3-win64

Short description of error
Whenever a speed control strip is based on a soft-trimmed input strip, the frame mapping is not right.

Exact steps for others to reproduce the error
Please open VSE Speedcontrol.blend.

Description:
The file contains two scenes named "Scene" and "Video":

  • Scene "Scene" displays letters A to J. Frame range is 0 to 9 (10 frames). Letters instead of numbers have been used to avoid a 0-based/1-based confusion.

  • Scene "Video" is only used for the VSE. Channel 1 contains a scene strip. The soft-trim start is 4, i.e. letters A, B, C and D have been trimmed. Consequently, 6 letters are left (E to J).

Now, the goal is to playback these 6 letters at 50% speed. This results in 12 frames with each letter being rendered twice, so the expected final sequence is EEFFGGHHIIJJ. The steps are:

  • Slide the right arrow of the strip to the right by 6 frames.
  • Add a speed control strip.

The resulting image sequence is EEFFGHHIJJJJ (Blender 2.74) or EEFGGHIIJJJJ (Build 42314b3)
The expected image sequence is EEFFGGHHIIJJ (each letter twice)

This is probably because soft trimming has not been taken into account correctly.

**System Information** Win7/64, GTX 750 Ti **Blender Version** 2.74 official, 2.75-42314b3-win64 **Short description of error** Whenever a speed control strip is based on a soft-trimmed input strip, the frame mapping is not right. **Exact steps for others to reproduce the error** Please open [VSE Speedcontrol.blend](https://archive.blender.org/developer/F197325/VSE_Speedcontrol.blend). Description: The file contains two scenes named "Scene" and "Video": - Scene "Scene" displays letters A to J. Frame range is 0 to 9 (10 frames). Letters instead of numbers have been used to avoid a 0-based/1-based confusion. - Scene "Video" is only used for the VSE. Channel 1 contains a scene strip. The soft-trim start is 4, i.e. letters A, B, C and D have been trimmed. Consequently, 6 letters are left (E to J). Now, the goal is to playback these 6 letters at 50% speed. This results in 12 frames with each letter being rendered twice, so the expected final sequence is EEFFGGHHIIJJ. The steps are: - Slide the right arrow of the strip to the right by 6 frames. - Add a speed control strip. The resulting image sequence is EEFFGHHIJJJJ (Blender 2.74) or EEFGGHIIJJJJ (Build 42314b3) The expected image sequence is EEFFGGHHIIJJ (each letter twice) This is probably because soft trimming has not been taken into account correctly.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

You are right, code works from start of strip data, not start of soft trim point and logic is somewhat weird. I'll see if I can improve it. I feel like the speed strip is too straightforward not to be easily understood by both coders and users and clearly this is not the case here.

You are right, code works from start of strip data, not start of soft trim point and logic is somewhat weird. I'll see if I can improve it. I feel like the speed strip is too straightforward not to be easily understood by both coders and users and clearly this is not the case here.

This issue was referenced by 0e83b0854f

This issue was referenced by 0e83b0854fc66af16dd187759c031e530ecd4c05

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 91264cfdd0

This issue was referenced by 91264cfdd05722422f77599f22d28aa093af7c1e
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45191
No description provided.